fixed the spacing header issue, cleared up some of the main css, added links to the pictures on the about page, added some css styling

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,15 +8,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 175vh;
+  /* height: 175vh; */
 }
 
-.About {
+.about {
   padding: 40px 10%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  margin-top: 2.5%;
+  /* height: 100vh; */
 }
 
 #pfp {
@@ -56,7 +57,7 @@ h1{
   padding-bottom: 15px;
   margin-bottom: 20px;
   font-size: 2.5em;
-  margin-top: 25rem;
+  /* margin-top: 25rem; */
   text-align: left;
 }
 
@@ -115,10 +116,6 @@ a:hover {
   }
 }
 
-.about {
-  padding: 40px 10%;
-}
-
 ul {
   margin-bottom: 20px;
   list-style-type: none;
@@ -152,6 +149,10 @@ button {
   min-height: 30px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 110%;
+  margin-left: 2px;
+  margin-right: 2px;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 button:hover {
